--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Chave Medicina</h1>
+        <h1>Distribuidora VyG</h1>
         <nav id="mainNav">
             <button onclick="mostrarSeccion('inventario')">Inventario</button>
             <button onclick="mostrarSeccion('facturacion')">Facturación</button>
