--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Distribuidora VyG</h1>
-        <nav id="mainNav">
+        <h1 id="companyName">SV Soft</h1>
+        <nav id="mainNav" style="display:none;">
             <button onclick="mostrarSeccion('inventario')">Inventario</button>
             <button onclick="mostrarSeccion('facturacion')">Facturación</button>
             <button onclick="mostrarSeccion('cuentasCobrar')">Cuentas por Cobrar</button>
@@ -18,10 +18,34 @@
             <button onclick="mostrarSeccion('ingresoGasto')">Ingreso/Gasto</button>
             <button onclick="mostrarSeccion('compras')">Compras</button>
             <button onclick="mostrarSeccion('registros')">Registros</button>
+
         </nav>
     </header>
 
     <main>
+        <section id="login" class="seccion">
+            <h2>Iniciar Sesión</h2>
+            <form id="loginForm">
+                <input type="text" id="loginUsername" placeholder="Nombre de usuario" required>
+                <input type="password" id="loginPassword" placeholder="Contraseña" required>
+                <button type="submit">Iniciar Sesión</button>
+            </form>
+            <p>¿No tienes una cuenta? <a href="#" onclick="mostrarSeccion('registro')">Regístrate</a></p>
+        </section>
+
+        <section id="registro" class="seccion" style="display:none;">
+            <h2>Registro</h2>
+            <form id="registroForm">
+                <input type="text" id="registroUsername" placeholder="Nombre de usuario" required>
+                <input type="password" id="registroPassword" placeholder="Contraseña" required>
+                <input type="text" id="registroEmpresa" placeholder="Nombre de la empresa" required>
+                <input type="password" id="registroClave" placeholder="Clave de seguridad" required>
+                <button type="submit">Registrarse</button>
+            </form>
+            <p>¿Ya tienes una cuenta? <a href="#" onclick="mostrarSeccion('login')">Inicia Sesión</a></p>
+            <p>Nota: Si quieres usar esta web comunícate conmigo a la cuenta de instagram <a href="https://www.instagram.com/sam_velazquez01?igsh=MWY1aHR1NmJuOHphag%3D%3D&utm_source=qr" target="_blank">@sam_velazquez01</a></p>
+        </section>
+    
         <section id="inventario" class="seccion">
             <h2>Inventario</h2>
             <button id="btnAgregarProducto">+ Agregar Producto</button>
@@ -235,5 +259,4 @@
     <script src="script.js"></script>
 </body>
 </html>
-
 
